--- a/src/Shimmer.Tests/packages.config
+++ b/src/Shimmer.Tests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AssertEx" version="1.0.0" targetFramework="net40" />
+  <package id="Caliburn.Micro" version="1.5.2" />
   <package id="MarkdownSharp" version="1.13.0.0" />
   <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net40" />
   <package id="Microsoft.Bcl.Async" version="1.0.16" targetFramework="net40" />
@@ -7,6 +9,8 @@
   <package id="Microsoft.Web.Xdt" version="1.0.0" targetFramework="net40" />
   <package id="Moq" version="4.1.1309.1617" targetFramework="net40" />
   <package id="Moq.Contrib" version="0.3" />
+  <package id="Newtonsoft.Json" version="5.0.6" />
+  <package id="NLog" version="2.0.1.2" />
   <package id="NuGet.Core" version="2.7.0" targetFramework="net40" />
   <package id="reactiveui-core" version="4.6.5" targetFramework="net40" allowedVersions="[4,5)" />
   <package id="reactiveui-testing" version="4.6.5" targetFramework="net40" allowedVersions="[4,5)" />
@@ -22,18 +26,4 @@
   <package id="System.IO.Abstractions.TestingHelpers" version="1.4.0.66" targetFramework="net40" />
   <package id="xunit" version="1.9.2" targetFramework="net40" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net40" />
-  <!--
-       START EVIL EVIL EVIL TRICKS
-       not referenced but packages indirectly need this
-       so rather than manually adding shit in within the test
-       i'm gonna restore it as part of the CI scripts
-
-       everything is terrible and no-one is upset
-  -->
-  <package id="Caliburn.Micro" version="1.5.2" />
-  <package id="NLog" version="2.0.1.2" />
-  <package id="Newtonsoft.Json" version="5.0.6" />
-  <!--
-      END EVIL EVIL EVIL TRICKS
-  -->
 </packages>
