--- a/src/Shimmer.Client/Shimmer.Client.csproj
+++ b/src/Shimmer.Client/Shimmer.Client.csproj
@@ -136,6 +136,7 @@
     <Compile Include="BitsManager.cs" />
     <Compile Include="DidntFollowInstructionsAppSetup.cs" />
     <Compile Include="Extensions\PackageExtensions.cs" />
+    <Compile Include="FrozenException.cs" />
     <Compile Include="IAppSetup.cs" />
     <Compile Include="InstallerHookOperations.cs" />
     <Compile Include="InstallManager.cs" />
