Revert "Kill Awaitable Rx"
This reverts commit fd2984729f92b1cbee66cc5f49fb01dce40d5674.

--- a/src/Squirrel.Client/Squirrel.Client.csproj
+++ b/src/Squirrel.Client/Squirrel.Client.csproj
@@ -141,12 +141,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Squirrel.Client.nuspec">
       <SubType>Designer</SubType>
     </None>
