--- a/src/Squirrel.Core/Squirrel.Core.csproj
+++ b/src/Squirrel.Core/Squirrel.Core.csproj
@@ -152,6 +152,9 @@
     <Compile Include="ReactiveUIMicro\ReactiveUI\RxApp.cs" />
     <Compile Include="ReactiveUIMicro\ReactiveUI\ScheduledSubject.cs" />
     <Compile Include="ReactiveUIMicro\ReactiveUI\WhenAnyShim.cs" />
+    <Compile Include="ReactiveUIMicro\Rx-Shim\AwaitableAsyncSubject.cs" />
+    <Compile Include="ReactiveUIMicro\Rx-Shim\GetAwaiter.cs" />
+    <Compile Include="ReactiveUIMicro\Rx-Shim\ImmutableList.cs" />
     <Compile Include="ReleaseEntry.cs" />
     <Compile Include="ReleasePackage.cs" />
     <Compile Include="MethodRunner.cs" />
@@ -161,6 +164,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="ReactiveUIMicro\Rx-Shim\LICENSE" />
     <None Include="Squirrel.Core.nuspec" />
   </ItemGroup>
   <ItemGroup />
